syntax = "proto3";
package grpc.drone;

message AddRequest {
  int32 id = 1;
  string address =2;
  string port =3;
  int32 coordX = 4;
  int32 coordY = 5;
}

message AddResponse {
  int32 response = 1;
}

message Order {
  string id = 1;
  int32 depX = 2;
  int32 depY = 3;
  int32 destX = 4;
  int32 destY = 5;
}

message OrderAck {
  int32 ack = 1;
}

service Drone {
  rpc Add(AddRequest) returns (AddResponse);
  rpc SendOrder(Order) returns (OrderAck);
}